Fix some layout issues and remove redundant styles

--- a/public/stylesheets/govuk-custom-dashboard.css
+++ b/public/stylesheets/govuk-custom-dashboard.css
@@ -1,59 +1,21 @@
 /* Note: `!important` is used to override default gov.uk css styles */
 
-
-html,body {
+html,
+body {
     background-color: #0b0c0c !important;
     height: 100vh;
 }
 
 .dashboard-body--flex {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     margin: 0;
     padding: 30px 50px;
 }
 
-.dashboard-body--flex .dashboard-background {
+.dashboard-body--flex .dashboard-main {
     flex-grow: 1;
-}
-
-.dashboard-body--black {
-    height: 100vh;
-}
-
-.dashboard-banner-inner {
-    border-bottom: 10px solid #0b0c0c;
-    margin-left: 20px;
-    margin-right: 0 !important;
-    max-width: 100% !important;
-}
-
-.dashboard-banner-inner {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-#slack-channel-link {
-    margin-right: 20px;
-    font-size: 32px;
-}
-
-.govuk-header__logo {
-    flex: 1;
-}
-
-.dashboard-background {
-    background-color: #0b0c0c;
-}
-
-.dashboard-background--black {
-    background-color: #0b0c0c
-}
-
-.dashboard-number-count {
-    text-align: left;
-    font-size: 72px;
 }
 
 .dashboard-logo {
